# unex-notifier

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/: main.py
src/application/: build_digest.py  init_setup.py  run_pipeline.py  smoke_checks.py
src/config/: settings.py
src/domain/: classification.py  email_entities.py
src/infra/ai/: gemini_classifier.py
src/infra/email/: imap_reader.py
src/infra/store/: sqlite_seen_repo.py
tests/: test_build_digest.py  test_domain_filtering.py
